--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>GalleryX</title>
   </head>
   <body>
+    <!-- First comment of the day -->
     <header>
       <h1></h1>
     </header>
