--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GalleryX</title>
   </head>
   <body>
+    <!-- This is a new testing comment -->
     <header>
       <h1></h1>
     </header>
