--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,23 @@
     <header>
       <h1></h1>
     </header>
-    <div class="ctn"></div>
+    <div class="ctn">
+      <h1>Contact Us</h1>
+      <form action="">
+        <label for="name">Name:</label>
+        <input type="text" name="name" id="name" />
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" />
+        <label for="msg">Message: </label>
+        <textarea
+          name="msg"
+          id="msg"
+          cols="30"
+          rows="10"
+          placeholder="Enter your message here"
+        ></textarea>
+      </form>
+    </div>
     <footer></footer>
   </body>
 </html>
