Added a nav bar and footer

--- a/contact.html
+++ b/contact.html
@@ -9,15 +9,24 @@
   <body>
     <!-- First comment of the day -->
     <header>
-      <h1></h1>
+      <nav>
+        <a href="">Home</a>
+        <a href="">Menu</a>
+        <a href="">About Us</a>
+      </nav>
     </header>
+    <h1>Contact Us</h1>
     <div class="ctn">
-      <h1>Contact Us</h1>
       <form action="">
         <label for="name">Name:</label>
-        <input type="text" name="name" id="name" />
+        <input type="text" name="name" id="name" placeholder="John Doe" />
         <label for="email">Email:</label>
-        <input type="email" name="email" id="email" />
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="JohnDoe@gmail.com"
+        />
         <label for="msg">Message: </label>
         <textarea
           name="msg"
@@ -26,8 +35,9 @@
           rows="10"
           placeholder="Enter your message here"
         ></textarea>
+        <input type="submit" />
       </form>
     </div>
-    <footer></footer>
+    <footer>Address: 123 Email: Help@GalleryX.com Phone: (800)756-1892</footer>
   </body>
 </html>
