--- a/index.html
+++ b/index.html
@@ -11,17 +11,16 @@
     <div class="ctn">
     <!-- This is a new testing comment -->
       <header>
-        <h1>Welcome to Gallery<span>X</span></h1>
+        <h1>Welcome to <span class="title1">Gallery</span><span class="title2">X</span></h1>
       </header>
       <nav>
-        <a href="about.html"> About Us</a>
-        <a href="menu.html"> About Us</a>
-        <a href="contact.html"> About Us</a>
+        <a href="about.html" target="_blank"> About Us</a>
+        <a href="menu.html" target="_blank"> Products</a>
+        <a href="contact.html" target="_blank"> Contact Us</a>
       </nav>
     </div>
     <video autoplay muted loop>
       <source src="img/artVideo.mp4">
-
     </video>
     <footer></footer>
   </body>
