Added Styling to nav and footer

--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,20 @@
     <!-- First comment of the day -->
     <header>
       <nav>
-        <a href="">Home</a>
-        <a href="">Menu</a>
-        <a href="">About Us</a>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="menu.html">Products</a>
+          </li>
+          <li>
+            <a href="about.html">About Us</a>
+          </li>
+          <li>
+            <a class="active" href="#">Contact Us</a>
+          </li>
+        </ul>
       </nav>
     </header>
     <h1>Contact Us</h1>
@@ -38,6 +49,12 @@
         <input type="submit" />
       </form>
     </div>
-    <footer>Address: 123 Email: Help@GalleryX.com Phone: (800)756-1892</footer>
+    <footer>
+      <div class="foot">
+        <p>Address: 123 ABC Street</p>
+        <p>Email: Help@GalleryX.com</p>
+        <p>Phone: (800)756-1892</p>
+      </div>
+    </footer>
   </body>
 </html>
