Actual about page pt1

--- a/about.html
+++ b/about.html
@@ -7,8 +7,28 @@
     <title>GalleryX</title>
   </head>
   <body>
-    <header>
-      <h1></h1>
+    <header></header>
+      <h1>What About Us?</h1>
+      <img src="https://media.tenor.com/images/e1e33f710b4a3edeb79936d5470fc60f/tenor.gif" alt="Mona lisa on the track">
+<div><h2>The Where & Why</h2></div>
+<p>
+Well, it first started with us painting for as long as we could remember. Fiddling with paitn brushes,
+and making a mess while creating a masterpiece is the foundation for our creativity not only wiht paintings,
+but our frames and the expereince of purchasing one. We take pride in those in the art culture supplying the community
+with paintings from the 15th century. Our journey on searching for quality materials has led us to improve the expereince 
+of purchasing a painting. A feeling you could never forget.
+</p>
+<div><h2>Why So Much Tho?</h2></div>
+<p>
+We ensure the frames & paintings come from the finest materieals and care throughout our process.
+Each painting shall be hand signed by its artist, along with a personalized handwritten note to our valued customers.
+We offer personalization to each frame ones chooses. We encourage all shopers to "go all out" and flex on all the h8ers,
+who don't understand the meaning behind the picture, the frame, and the way it sits on the wall. We understand a good expereince
+is a lifetime customer.</p>
+<div><h2>Why You Need It</h2></div>
+<p>
+
+</p>
     </header>
     <div class="ctn"></div>
     <footer></footer>
