--- a/index.html
+++ b/index.html
@@ -5,13 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style_home.css" />
     <title>GalleryX</title>
+    <link rel="stylesheet" href="style_home.css">
   </head>
   <body>
+    <div class="ctn">
     <!-- This is a new testing comment -->
-    <header>
-      <h1></h1>
-    </header>
-    <div class="ctn"></div>
+      <header>
+        <h1>Welcome to <span class="title1">Gallery</span><span class="title2">X</span></h1>
+      </header>
+      <nav>
+        <a href="about.html" target="_blank"> About Us</a>
+        <a href="menu.html" target="_blank"> Products</a>
+        <a href="contact.html" target="_blank"> Contact Us</a>
+      </nav>
+    </div>
+    <video autoplay muted loop>
+      <source src="img/artVideo.mp4">
+    </video>
     <footer></footer>
   </body>
 </html>
