Finished styling Nav bar and footer

--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <!-- First comment of the day -->
+    <!-- Copy everything in the header tags -->
     <header>
       <nav>
         <ul>
@@ -21,7 +22,7 @@
             <a href="about.html">About Us</a>
           </li>
           <li>
-            <a class="active" href="#">Contact Us</a>
+            <a class="active" href="contact.html">Contact Us</a>
           </li>
         </ul>
       </nav>
@@ -49,6 +50,7 @@
         <input type="submit" />
       </form>
     </div>
+    <!-- copy everything in the footer tags -->
     <footer>
       <div class="foot">
         <p>Address: 123 ABC Street</p>
