--- a/about.html
+++ b/about.html
@@ -7,7 +7,25 @@
     <title>GalleryX</title>
   </head>
   <body>
-    <header></header>
+<header>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a href="menu.html">Products</a>
+          </li>
+          <li>
+            <a class="active"  href="about.html">About Us</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div class="ctn">
       <h1>What About Us?</h1>
       <img src="https://media.tenor.com/images/e1e33f710b4a3edeb79936d5470fc60f/tenor.gif" alt="Mona lisa on the track">
 <div><h2>The Where & Why</h2></div>
@@ -25,12 +43,21 @@ Each painting shall be hand signed by its artist, along with a personalized hand
 We offer personalization to each frame ones chooses. We encourage all shopers to "go all out" and flex on all the h8ers,
 who don't understand the meaning behind the picture, the frame, and the way it sits on the wall. We understand a good expereince
 is a lifetime customer.</p>
+<img  class="Art" src="https://www.bing.com/th/id/OGC.b05186c2f5ff4a424abcba13428bcf50?pid=1.7&rurl=https%3a%2f%2fwallpapercave.com%2fwp%2fwp2757868.gif&ehk=Wu6hbyNaNi4qJY1SA6BX0zfB0pxDTI0AV2KF1%2fEC2Do%3d"/>
 <div><h2>Why You Need It</h2></div>
 <p>
-
+When they ask you why, I ask you why not? Why go through the trouble of creating and customizing your framed artwork,
+to not buy it? We both know you deserve to give yourself more then that. We as humans we live for expereinces. Let us, GalleryX 
+create an everlasting experience for you and your wall.
 </p>
-    </header>
-    <div class="ctn"></div>
-    <footer></footer>
+
+    </div>
+<footer>
+      <div class="foot">
+        <p class="footer-p">Address: 123 ABC Street</p>
+        <p class="footer-p">Email: Help@GalleryX.com</p>
+        <p class="footer-p" >Phone: (800)756-1892</p>
+      </div>
+    </footer>
   </body>
 </html>
