Added header and footer to products menu

--- a/menu.html
+++ b/menu.html
@@ -8,74 +8,138 @@
   </head>
   <body>
     <header>
-      <h1></h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html">Home</a>
+          </li>
+          <li>
+            <a class="active" href="menu.html">Products</a>
+          </li>
+          <li>
+            <a href="about.html">About Us</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
     </header>
     <section class="gallery-menu">
-
       <h2>Paintings Available</h2>
 
       <div class="menu-container">
         <div class="project-card1">
-        <div class="project-card">
-          <img class="menu-image" src="https://rb.gy/pb69nj" alt="painting 1"/>
-          <h3>Abstract CityScape</h3>
-          <p class="subtext">Immerse yourself in the rich tapestry of colors,
-             shapes, and textures that define the urban environment.
-              Whether you're drawn to the sleek lines of skyscrapers or the intricate 
-              details of bustling city streets, our collection offers something for every taste and style. 
-              Elevate your space with the dynamic energy of the cityscape, adding a touch of modern sophistication to any room.</p>
-              <a class="btn">Buy</a>
-        </div>
-        <div class="project-card">
-          <img class="menu-image" src="https://shorturl.at/hqPRV" alt="painting 2"/>
-          <h3>The Bohemians</h3>
-          <p class="subtext">At the heart of <strong>The Bohemians</strong> lies the desire to create a sense of serenity
-             and tranquility in the viewer. Whether through subtle textures, rhythmic patterns, or ethereal color
-              palettes, each piece in our collection invites you to pause, reflect, and find moments of inner peace 
-              amidst the chaos of everyday life</p>
-              <a class="btn">Buy</a>
-        </div>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://rb.gy/pb69nj"
+              alt="painting 1"
+            />
+            <h3>Abstract CityScape</h3>
+            <p class="subtext">
+              Immerse yourself in the rich tapestry of colors, shapes, and
+              textures that define the urban environment. Whether you're drawn
+              to the sleek lines of skyscrapers or the intricate details of
+              bustling city streets, our collection offers something for every
+              taste and style. Elevate your space with the dynamic energy of the
+              cityscape, adding a touch of modern sophistication to any room.
+            </p>
+            <a class="btn">Buy</a>
+          </div>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://shorturl.at/hqPRV"
+              alt="painting 2"
+            />
+            <h3>The Bohemians</h3>
+            <p class="subtext">
+              At the heart of <strong>The Bohemians</strong> lies the desire to
+              create a sense of serenity and tranquility in the viewer. Whether
+              through subtle textures, rhythmic patterns, or ethereal color
+              palettes, each piece in our collection invites you to pause,
+              reflect, and find moments of inner peace amidst the chaos of
+              everyday life
+            </p>
+            <a class="btn">Buy</a>
+          </div>
         </div>
         <div class="project-card2">
-        <div class="project-card">
-          <img class="menu-image" src="https://shorturl.at/qtUV2" alt="painting 3"/>
-          <h3>Minimalism 2 Wall Art</h3>
-          <p class="subtext">Abstract minimalism is more than just an art style;
-             it's a philosophy that celebrates simplicity, clarity, and the beauty
-              of the essential. In our collection, you'll find pieces that embrace clean lines, geometric shapes,
-               and a restrained color palette to create compositions that exude a sense of calm and tranquility.</p>
-              <a class="btn">Buy</a>
-        </div>
-        <div class="project-card">
-          <img class="menu-image" src="https://shorturl.at/BJPSZ" alt="painting 4"/>
-          <h3>Homesick</h3>
-          <p class="subtext">Canvas photos of black African women who miss the land of Africa hang on the wall of your 
-            bedroom, making you often miss the beauty of your hometown. The setting sun slowly sets, the golden afterglow 
-            falls on the grassland, and the giraffes wander leisurely. Wonderful picture</p>
-              <a class="btn">Buy</a>
-        </div>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://shorturl.at/qtUV2"
+              alt="painting 3"
+            />
+            <h3>Minimalism 2 Wall Art</h3>
+            <p class="subtext">
+              Abstract minimalism is more than just an art style; it's a
+              philosophy that celebrates simplicity, clarity, and the beauty of
+              the essential. In our collection, you'll find pieces that embrace
+              clean lines, geometric shapes, and a restrained color palette to
+              create compositions that exude a sense of calm and tranquility.
+            </p>
+            <a class="btn">Buy</a>
+          </div>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://shorturl.at/BJPSZ"
+              alt="painting 4"
+            />
+            <h3>Homesick</h3>
+            <p class="subtext">
+              Canvas photos of black African women who miss the land of Africa
+              hang on the wall of your bedroom, making you often miss the beauty
+              of your hometown. The setting sun slowly sets, the golden
+              afterglow falls on the grassland, and the giraffes wander
+              leisurely. Wonderful picture
+            </p>
+            <a class="btn">Buy</a>
+          </div>
         </div>
         <div class="project-card3">
-        <div class="project-card">
-          <img class="menu-image" src="https://shorturl.at/rsKT7" alt="painting 5"/>
-          <h3>Afro King Wall Art</h3>
-          <p class="subtext">Good idea for home interior walls decor such as living room,
-             bedroom, kitchen,bathroom,studio,guest room,hotel,restaurant,bar,office and others</p>
-              <a class="btn">Buy</a>
-        </div>
-        <div class="project-card">
-          <img class="menu-image" src="https://shorturl.at/bgFY3" alt="painting 6"/>
-          <h3>Providence Art</h3>
-          <p class="subtext">Reminiscent of the modern x-ray, this black and white photograph captures 
-            the fragile elegance of a flower. This giclee reproduction is housed in a neutral black frame 
-            to blend with any style.</p>
-              <a class="btn">Buy</a>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://shorturl.at/rsKT7"
+              alt="painting 5"
+            />
+            <h3>Afro King Wall Art</h3>
+            <p class="subtext">
+              Good idea for home interior walls decor such as living room,
+              bedroom, kitchen,bathroom,studio,guest
+              room,hotel,restaurant,bar,office and others
+            </p>
+            <a class="btn">Buy</a>
+          </div>
+          <div class="project-card">
+            <img
+              class="menu-image"
+              src="https://shorturl.at/bgFY3"
+              alt="painting 6"
+            />
+            <h3>Providence Art</h3>
+            <p class="subtext">
+              Reminiscent of the modern x-ray, this black and white photograph
+              captures the fragile elegance of a flower. This giclee
+              reproduction is housed in a neutral black frame to blend with any
+              style.
+            </p>
+            <a class="btn">Buy</a>
+          </div>
         </div>
       </div>
-        </div>
     </section>
 
     <div class="ctn"></div>
-    <footer></footer>
+    <footer>
+      <div class="foot">
+        <p class="footer-p">Address: 123 ABC Street</p>
+        <p class="footer-p">Email: Help@GalleryX.com</p>
+        <p class="footer-p">Phone: (800)756-1892</p>
+      </div>
+    </footer>
   </body>
 </html>
